<resources>

    <string name="app_name">Donation app</string>
    <string name="username">pseudo</string>
    <string name="password">mot de passe</string>
    <string name="login">login</string>
    <string name="connexion">Connexion</string>
    <string name="Inscription">Inscription</string>
    <string name="prénom">prénom</string>
    <string name="nom">nom</string>
    <string name="pseudo">pseudo</string>
    <string name="motdepasse">mot de passe</string>
    <string name="province">province</string>
    <string name="ville">ville</string>
    <string name="adresse">adresse</string>
    <string name="telephone">téléphone</string>
    <string name="inscription">s\'inscrire</string>
    <string name="registrate">Pas encore inscrit ?, crée un compte</string>
    <string name="back_to_login">retour</string>
    <string name="bonjour">Bonjour </string>
    <string name="liste_repas">Liste de repas</string>
    <string name="repas_position">Repas selectionné</string>
    <string name="registration_message">inscription réussie !</string>


    <!--Errors-->
    <string name="username_empty_message">le pseudo est obligatoire !</string>
    <string name="password_empty_message">le mot de passe est obligatoire !</string>
    <string name="firstname_empty_error">prénom obligatoire</string>
    <string name="lastname_empty_error">nom obligatoire</string>
    <string name="province_empty_error">province est obligatoire</string>
    <string name="city_empty_error">la ville est obligatoire</string>
    <string name="street_and_number_empty_error">le numéro et la rue sont obligatoires</string>
    <string name="address_empty_error">adresse obligatoire !</string>
    <string name="mandatory_fields_error">ces champs sont obligatoires</string>
    <string name="connection_error">Pas de connexion internet</string>
    <string name="no_error_detected">Aucune erreur detectée</string>
    <string name="request_error">Une erreur s\'est produite pendant la requete</string>
    <string name="technical_error">Il y a une erreur technique</string>
    <string name="usernameWarneMessage">le pseudo est obligatoire!</string>
    <string name="passwordWarnMessage">le mot de passe est obligatoire</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="user_exists">Cet utilisateur existe deja</string>
    <string name="phone_error">numéro de téléphone obligatoire</string>

    <string name="meal_name_error">nom de repas obligatoire</string>
    <string name="meal_categorie_error">catégorie obligatoire</string>
    <string name="nbPortions_error">la portion est obligatoire</string>
    <string name="meal_description_error">description obligatoire</string>
    <string name="camera_error">cette action est impossible</string>

    <string name="credentials_problem">pseudo ou mot de passe incorrect !</string>


    <!--Welcome message-->
    <string name="welcome_message">Bienvenues à l\'application de donation de nourriture <b></b></string>
    <string name="register_page_message">inscription</string>
    <string name="connection_message">Vous etes connecté !</string>
    <string name="se_connecter">SE CONNECTER</string>

    <!--Share preferences values-->
    <string name="token">token</string>
    <string name="sharedPref">sharedPref</string>
    <string name="username_token">username</string>
    <string name="user_id_token">userId</string>
    <string name="expDate">expDate</string>


    <!-- other Strings -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="prix">Pirx :</string>
    <string name="disponible">Disponible :</string>
    <string name="utilisateur">Client :</string>
    <string name="categorie">Categorie :</string>
    <string name="categoriesList">1) Burger 2) Pizza 3) Sushi\n4) Plat belge 5) Plat espagnol</string>
    <string name="description">Description :</string>
    <string name="nom_repas">Nom du repas :</string>
    <string name="header_text">Liste des repas</string>
    <string name="portion_number">Quantité: </string>
    <string name="datePublication">Date de publication :</string>
    <string name="addToCart">Ajouter au panier</string>
    <string name="meal_clicked">Plat selectionné</string>
    <string name="nomReaps">nom du repas</string>
    <string name="description_repas">description</string>
    <string name="categorie_repas">catégorie</string>
    <string name="nombre_portion">nombre de portions</string>
    <string name="donation">Donation</string>
    <string name="cart">Panier</string>
    <string name="donner">DONNER</string>
    <string name="take_a_picture">Prendre une photo</string>
    <string name="take_picture_message">appuyez sur le bouton pour prendre une photo du repas</string>
    <string name="navigation_open">Open navigation drawer</string>
    <string name="navigation_close">Close navigation drawer</string>
    <string name="connecting">connexion...</string>
    <string name="imageRequired">Une photo est requise</string>
    <string name="claim">Réclamer</string>
    <string name="resetCart">Vider le panier</string>
    <string name="enterNumber">Entrez des chiffres pour\ncatégorie et nombre de portion</string>
    <string name="emptyCart">Panier vide</string>
    <string name="mealAlreadyInCart">Ce repas est déjà dans le panier</string>
    <string name="quantity">Quantité: </string>




    <!--Meals Categories-->
    <string-array name="meals_categories">
        <item>Burger</item>
        <item>Pizza</item>
        <item>Sushi</item>
        <item>Plat Espagnol</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="arnaud_donny"><![CDATA[made by Arnaud Berg & Donny Mboma]]></string>
    <string name="login_sucess">Connecté !</string>
    <string name="ok_text">OK</string>

</resources>